# job-tracker

app/: cli.py  docker-compose.yml  init_db.py  pyproject.toml  utils.py
app/db/: init_db.py
app/jobs/: add.py
app/jobs/models/: job_posting.py
job_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
